# safe

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: analyzer.rs  cli.rs  command.rs  config.rs  executor.rs  main.rs  registry.rs  report.rs  reputation.rs  source.rs
src/reputation/: cloudflare.rs  domain.rs  github_advisory.rs  osv.rs  urlhaus.rs  virustotal.rs
