[package]
name = "safeinstall"
version = "0.1.0"
edition = "2026"
description = "Inspect remote installers before guarded execution"
license = "MIT"

[[bin]]
name = "safe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
tokio = { version = "1.45", features = ["macros", "process", "rt-multi-thread", "signal"] }
url = "2.5"
